refactor(script): travis-ci scripts

--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
     "lint": "npm run lint:src && npm run lint:pg",
     "lint:src": "tslint -p ./src/framework/tsconfig.json --fix",
     "lint:pg": "tslint -p ./src/playground/tsconfig.json --fix",
-    "ci:install": "npm i && npm run install:pg",
+    "ci:install": "npm ci && npm run ci:install:pg",
+    "ci:install:pg": "( cd ./src/playground && npm ci )",
     "ci:lint": "npm run lint",
     "ci:build": "npm run build:src && npm run build:pg",
-    "ci:test": "npm t -- --coverage && cat ./dist/jest/coverage/lcov.info | coveralls",
+    "ci:test": "npm t -- --ci --coverage && cat ./dist/jest/coverage/lcov.info | coveralls",
     "install:pg": "( cd ./src/playground && npm i )",
     "publish": "./scripts/publish/publish.sh",
     "release:prepare": "npm run clean && npm run build",
