build(common): update expo to sdk-33

--- a/package.json
+++ b/package.json
@@ -8,33 +8,33 @@
   "bugs": {
     "url": "https://github.com/akveo/react-native-ui-kitten/issues"
   },
-  "main": "index.js",
   "scripts": {
     "start": "npm run start:pg:dev",
     "start:pg": "npm run install:pg && npm start --prefix ./src/playground",
     "start:pg:prod": "npm run env:set -- prod && npm run start:pg",
     "start:pg:dev": "npm run env:set -- dev && npm run start:pg",
-    "env:set": "sh ./scripts/environment/set-env.sh",
-    "build": "npm run build:src",
-    "build:src": "tsc -p ./src/framework/tsconfig.json",
-    "build:pg": "tsc -p ./src/playground/tsconfig.json",
+    "env:set": "./scripts/environment/set-env.sh",
+    "build": "./scripts/build/compile-ts.sh",
+    "build:transform": "./scripts/build/transform-paths.sh",
+    "build:dev": "npm run build -- dev && npm run build:transform -- dev",
+    "build:prod": "npm run build -- prod && npm run build:transform -- prod",
     "clean": "rimraf ./dist",
     "docs:parse": "gulp docs",
     "docs:serve": "cd docs && npm start",
     "docs:start": "npm run docs:parse && npm run docs:serve",
     "conventional-changelog": "conventional-changelog",
     "version:changelog": "npm run conventional-changelog -- -i CHANGELOG.md -s",
+    "lint:src": "tslint -c ./tslint.json ./src/framework/**/*.{ts,tsx}",
+    "lint:pg": "tslint -c ./tslint.json ./src/playground/src/**/*.{ts,tsx}",
     "lint": "npm run lint:src && npm run lint:pg",
-    "lint:src": "tslint -p ./src/framework/tsconfig.json --fix",
-    "lint:pg": "tslint -p ./src/playground/tsconfig.json --fix",
     "ci:install": "npm ci && npm run ci:install:pg",
     "ci:install:pg": "( cd ./src/playground && npm ci )",
     "ci:lint": "npm run lint",
-    "ci:build": "npm run build:src && npm run build:pg",
+    "ci:build": "npm run build:prod",
     "ci:test": "npm t -- --ci --coverage && cat ./dist/jest/coverage/lcov.info | coveralls",
     "install:pg": "( cd ./src/playground && npm i )",
     "publish": "./scripts/publish/publish.sh",
-    "release:prepare": "npm run clean && npm run build",
+    "release:prepare": "npm run clean && npm run build:prod",
     "release:validate": "npm run lint && npm run test",
     "release": "npm run release:prepare && npm run release:validate && npm run publish",
     "test": "jest"
@@ -48,17 +48,17 @@
   "devDependencies": {
     "@babel/core": "^7.1.2",
     "@babel/runtime": "^7.1.2",
-    "@types/expo": "^32.0.13",
+    "@types/gulp": "^4.0.6",
+    "@types/gulp-replace": "0.0.31",
     "@types/jest": "^24.0.13",
     "@types/lodash.merge": "^4.6.6",
-    "@types/react": "^16.8.17",
-    "@types/react-native": "^0.57.57",
-    "@types/react-navigation": "^3.0.7",
+    "@types/react": "^16.8.19",
+    "@types/react-native": "^0.57.60",
     "@types/react-test-renderer": "^16.8.1",
-    "conventional-changelog-cli": "^2.0.21",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
     "babel-plugin-module-resolver": "^3.2.0",
+    "conventional-changelog-cli": "^2.0.21",
     "coveralls": "^3.0.2",
     "del": "^4.1.1",
     "gulp": "^3.9.1",
@@ -67,18 +67,16 @@
     "husky": "^1.1.2",
     "jest": "^24.0.0-alpha.9",
     "metro-react-native-babel-preset": "^0.49.0",
-    "react": "^16.5.0",
-    "react-addons-test-utils": "^15.6.2",
-    "react-native": "^0.57.1",
-    "react-native-mock": "^0.3.1",
+    "react": "^16.8.3",
+    "react-native": "^0.59.8",
     "react-native-testing-library": "^1.5.0",
-    "react-native-typescript-transformer": "^1.2.10",
     "react-test-renderer": "^16.6.0",
     "rimraf": "^2.6.2",
     "ts-jest": "^23.10.5",
     "ts-node": "^3.2.2",
+    "tscpaths": "0.0.9",
     "tslint": "^5.12.1",
     "typedoc": "^0.14.2",
-    "typescript": "^3.4.5"
+    "typescript": "^3.5.1"
   }
 }
