--- a/src/playground/package.json
+++ b/src/playground/package.json
@@ -7,12 +7,12 @@
   },
   "dependencies": {
     "@eva-design/eva": "1.0.0-beta.2",
-    "expo": "^32.0.6",
-    "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
-    "react-navigation": "^3.0.9"
+    "expo": "^33.0.3",
+    "react": "^16.8.3",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
+    "react-navigation": "^3.11.0"
   },
   "devDependencies": {
-    "react-native-typescript-transformer": "^1.2.10"
+    "@types/react-navigation": "^3.0.7"
   }
 }
