--- a/docs/package.json
+++ b/docs/package.json
@@ -7,8 +7,10 @@
     "ngh": "ngh",
     "start": "ng serve",
     "build": "ng build",
-    "build:prod": "npm run build -- docs --prod --aot --base-href '/react-native-ui-kitten/'",
-    "docs:gh-pages": "npm run docs:prod && npm run ngh -- --dir ./docs/dist"
+    "prebuild:prod": "rimraf dist",
+    "build:prod": "npm run build -- docs --prod --aot --base-href '/react-native-ui-kitten/docs/'",
+    "postbuild:prod": "cp -r src/landing/ dist/",
+    "docs:gh-pages": "npm run ngh -- --dir ./dist"
   },
   "dependencies": {
     "@angular/animations": "8.0.0",
