--- a/src/framework/package.json
+++ b/src/framework/package.json
@@ -9,8 +9,8 @@
     "url": "https://github.com/akveo/react-native-ui-kitten/issues"
   },
   "dependencies": {
-    "@eva-design/dss": "1.0.0-beta.2",
-    "@eva-design/processor": "1.0.0-beta.2",
+    "@eva-design/dss": "1.0.0",
+    "@eva-design/processor": "1.0.0",
     "hoist-non-react-statics": "^3.2.1",
     "lodash.merge": "^4.6.1"
   }
