--- a/src/playground/package.json
+++ b/src/playground/package.json
@@ -6,7 +6,7 @@
     "start": "expo start -c"
   },
   "dependencies": {
-    "@eva-design/eva": "1.0.0-beta.2",
+    "@eva-design/eva": "1.0.0",
     "expo": "^33.0.3",
     "react": "^16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
