--- a/src/framework/package.json
+++ b/src/framework/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-ui-kitten",
-  "version": "4.0.0-beta.1",
+  "version": "4.0.1",
   "license": "MIT",
   "author": "akveo <contact@akveo.com>",
   "homepage": "https://github.com/akveo/react-native-ui-kitten#readme",
