--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/lodash.merge": "^4.6.6",
     "@types/react": "^16.8.19",
     "@types/react-native": "^0.57.60",
+    "@types/react-navigation": "^3.0.7",
     "@types/react-test-renderer": "^16.8.1",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
