build(common): typescript common issues

--- a/tsconfig.prod.json
+++ b/tsconfig.prod.json
@@ -1,30 +1,14 @@
 {
+  "extends": "./tsconfig",
   "compilerOptions": {
-    "baseUrl": "./",
     "outDir": "./dist/tsc-out",
     "declaration": true,
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
-    "resolveJsonModule": true,
     "skipLibCheck": true,
-    "moduleResolution": "node",
-    "jsx": "react-native",
     "target": "es2015",
     "module": "esnext",
     "lib": [
       "es2018"
-    ],
-    "typeRoots": [
-      "./node_modules/@types"
-    ],
-    "paths": {
-      "@kitten/ui": [
-        "./src/framework/ui"
-      ],
-      "@kitten/theme": [
-        "./src/framework/theme"
-      ]
-    }
+    ]
   },
   "include": [
     "./src",
