--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "@eva-design/dss": "1.0.0",
-    "@eva-design/processor": "1.0.0",
+    "@eva-design/dss": "^1.0.1",
+    "@eva-design/processor": "^1.0.1",
     "hoist-non-react-statics": "^3.2.1",
     "lodash.merge": "^4.6.1"
   },
