--- a/src/playground/package.json
+++ b/src/playground/package.json
@@ -9,7 +9,13 @@
     "@eva-design/eva": "1.0.0",
     "expo": "^33.0.6",
     "react": "^16.8.3",
+    "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
+    "react-native-web": "^0.11.4",
     "react-navigation": "^3.11.0"
+  },
+  "devDependencies": {
+    "@expo/webpack-config": "^0.5.11",
+    "babel-preset-expo": "^5.2.0"
   }
 }
