--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "husky": "^1.1.2",
     "jest": "^24.0.0-alpha.9",
     "metro-react-native-babel-preset": "^0.49.0",
-    "react": "^16.8.3",
+    "react": "16.8.3",
     "react-native": "^0.59.8",
     "react-native-testing-library": "^1.5.0",
     "react-test-renderer": "^16.6.0",
