--- a/src/playground/package.json
+++ b/src/playground/package.json
@@ -7,12 +7,14 @@
   },
   "dependencies": {
     "@eva-design/eva": "1.0.0",
-    "expo": "^33.0.6",
-    "react": "^16.8.3",
+    "expo": "^34.0.3",
+    "react": "16.8.3",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
+    "react-native-gesture-handler": "^1.3.0",
+    "react-native-reanimated": "^1.1.0",
     "react-native-web": "^0.11.4",
-    "react-navigation": "^3.11.0"
+    "react-navigation": "^3.11.1"
   },
   "devDependencies": {
     "@expo/webpack-config": "^0.5.11",
