feat(template): add ui-kitten template projects

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,12 @@
     "paths": {
       "@kitten/*": [
         "./src/framework/*"
+      ],
+      "@ui-kitten/*": [
+        "./src/*"
+      ],
+      "react-native-ui-kitten": [
+        "./src/framework"
       ]
     }
   }
