--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "dependencies": {
     "@eva-design/dss": "^1.0.1",
+    "@eva-design/eva": "^1.0.1",
     "@eva-design/processor": "^1.0.1",
     "hoist-non-react-statics": "^3.2.1",
     "lodash.merge": "^4.6.1"
@@ -74,7 +75,7 @@
     "react": "16.8.3",
     "react-native": "^0.59.8",
     "react-native-testing-library": "^1.5.0",
-    "react-test-renderer": "^16.6.0",
+    "react-test-renderer": "^16.8.3",
     "rimraf": "^2.6.2",
     "ts-jest": "^23.10.5",
     "ts-node": "^3.2.2",
