--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "sourceMap": true,
     "moduleResolution": "node",
     "jsx": "react-native",
+    "target": "es2015",
     "typeRoots": [
       "./node_modules/@types"
     ],
