--- a/src/templates/template-ui-kitten-typescript/package.json
+++ b/src/templates/template-ui-kitten-typescript/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-template-ui-kitten-typescript",
   "description": "React Native template with UI Kitten and TypeScript",
-  "version": "4.1.0",
+  "version": "4.2.0-beta.1",
   "license": "MIT",
   "author": "akveo <contact@akveo.com>",
   "homepage": "https://github.com/akveo/react-native-ui-kitten#readme",
