--- a/package.json
+++ b/package.json
@@ -35,17 +35,22 @@
     "ci:build": "npm run build:prod",
     "ci:test": "npm t -- --ci --coverage && cat ./dist/jest/coverage/lcov.info | coveralls",
     "install:pg": "( cd ./src/playground && npm i )",
-    "publish": "./scripts/publish/publish.sh",
     "release:prepare": "npm run clean && npm run build:prod",
     "release:validate": "npm run lint && npm run test",
-    "release:framework": "npm run release:prepare && npm run release:validate && npm run publish-framework",
-    "release:modules": "npm run release:prepare && npm run release:validate && npm run publish-modules",
+    "publish:framework": "./scripts/publish/publish-framework.sh",
+    "publish:framework:beta": "npm run publish:framework -- beta",
+    "publish:modules": "./scripts/publish/publish-modules.sh",
+    "publish:modules:beta": "npm run publish:modules -- beta",
+    "release:framework": "npm run release:prepare && npm run release:validate && npm run publish:framework",
+    "release:modules": "npm run release:prepare && npm run release:validate && npm run publish:modules",
+    "release:framework:beta": "npm run release:prepare && npm run release:validate && npm run publish:framework:beta",
+    "release:modules:beta": "npm run release:prepare && npm run release:validate && npm run publish:modules:beta",
     "test": "jest"
   },
   "dependencies": {
-    "@eva-design/dss": "^1.0.1",
-    "@eva-design/eva": "^1.0.1",
-    "@eva-design/processor": "^1.0.1",
+    "@eva-design/dss": "^1.1.0-beta.1",
+    "@eva-design/eva": "^1.1.0-beta.1",
+    "@eva-design/processor": "^1.1.0-beta.1",
     "hoist-non-react-statics": "^3.2.1",
     "lodash.merge": "^4.6.1",
     "react-native-eva-icons": "^1.1.0",
