--- a/package.json
+++ b/package.json
@@ -78,14 +78,13 @@
     "gulp-replace": "^1.0.0",
     "gulp-typedoc": "^2.2.1",
     "husky": "^1.1.2",
-    "jest": "^24.0.0-alpha.9",
+    "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.49.0",
     "react": "16.8.3",
     "react-native": "^0.59.8",
     "react-native-testing-library": "^1.5.0",
     "react-test-renderer": "16.8.3",
     "rimraf": "^2.6.2",
-    "ts-jest": "^23.10.5",
     "ts-node": "^3.2.2",
     "tscpaths": "0.0.9",
     "tslint": "^5.12.1",
