--- a/src/framework/package.json
+++ b/src/framework/package.json
@@ -12,6 +12,7 @@
     "@eva-design/dss": "^1.1.0-beta.1",
     "@eva-design/processor": "^1.1.0-beta.1",
     "hoist-non-react-statics": "^3.2.1",
-    "lodash.merge": "^4.6.1"
+    "lodash.merge": "^4.6.1",
+    "fecha": "3.0.3"
   }
 }
