--- a/src/templates/template-ui-kitten/package.json
+++ b/src/templates/template-ui-kitten/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-template-ui-kitten",
-  "version": "4.2.0-beta.2",
+  "version": "4.2.0",
   "license": "MIT",
   "author": "akveo <contact@akveo.com>",
   "homepage": "https://github.com/akveo/react-native-ui-kitten#readme",
