fix(script): template modules publish script

--- a/tsconfig.prod.json
+++ b/tsconfig.prod.json
@@ -16,6 +16,8 @@
     "./src/**/package.json"
   ],
   "exclude": [
+    "./src/templates",
+    "./src/playground",
     "./**/*.spec.ts",
     "./**/*.spec.tsx",
     "./**/*.snap"
