--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-ui-kitten",
-  "version": "4.2.0",
+  "version": "4.3.0-beta.1",
   "license": "MIT",
   "author": "akveo <contact@akveo.com>",
   "homepage": "https://github.com/akveo/react-native-ui-kitten#readme",
@@ -50,9 +50,9 @@
     "test": "jest"
   },
   "dependencies": {
-    "@eva-design/dss": "^1.2.0",
-    "@eva-design/eva": "^1.2.0",
-    "@eva-design/processor": "^1.2.0",
+    "@eva-design/dss": "^1.3.0-beta.1",
+    "@eva-design/eva": "^1.3.0-beta.1",
+    "@eva-design/processor": "^1.3.0-beta.1",
     "hoist-non-react-statics": "^3.2.1",
     "@welldone-software/why-did-you-render": "^3.3.3",
     "date-fns": "^1.30.1",
