--- a/src/framework/package.json
+++ b/src/framework/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-ui-kitten",
-  "version": "4.2.0",
+  "version": "4.3.0-beta.1",
   "license": "MIT",
   "author": "akveo <contact@akveo.com>",
   "homepage": "https://github.com/akveo/react-native-ui-kitten#readme",
@@ -9,8 +9,8 @@
     "url": "https://github.com/akveo/react-native-ui-kitten/issues"
   },
   "dependencies": {
-    "@eva-design/dss": "^1.2.0",
-    "@eva-design/processor": "^1.2.0",
+    "@eva-design/dss": "^1.3.0-beta.1",
+    "@eva-design/processor": "^1.3.0-beta.1",
     "hoist-non-react-statics": "^3.2.1",
     "lodash.merge": "^4.6.1",
     "fecha": "3.0.3"
