--- a/src/playground/package.json
+++ b/src/playground/package.json
@@ -7,6 +7,7 @@
     "@eva-design/eva": "^1.3.0-beta.1",
     "@react-navigation/web": "^1.0.0-alpha.9",
     "expo": "^35.0.0",
+    "expo-font": "^7.0.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
