--- a/src/template-ts/package.json
+++ b/src/template-ts/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ui-kitten/template-ts",
   "description": "React Native template project with UI Kitten and TypeScript",
-  "version": "4.3.0-beta.1",
+  "version": "4.3.0",
   "author": "akveo <contact@akveo.com>",
   "license": "MIT",
   "homepage": "https://github.com/akveo/react-native-ui-kitten#readme",
