--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ui-kitten",
-  "version": "4.3.0-beta.1",
+  "version": "4.3.0",
   "private": true,
   "license": "MIT",
   "author": "akveo <contact@akveo.com>",
@@ -28,7 +28,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
-    "@eva-design/eva": "^1.3.0-beta.1",
+    "@eva-design/eva": "^1.3.0",
     "@types/gulp": "ts3.5",
     "@types/gulp-replace": "ts3.5",
     "@types/jest": "ts3.5",
