--- a/src/components/package.json
+++ b/src/components/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ui-kitten/components",
   "description": "React Native components based on Eva Design System",
-  "version": "4.3.0-beta.1",
+  "version": "4.3.0",
   "author": "akveo <contact@akveo.com>",
   "license": "MIT",
   "homepage": "https://github.com/akveo/react-native-ui-kitten#readme",
@@ -21,8 +21,8 @@
     "access": "public"
   },
   "dependencies": {
-    "@eva-design/dss": "^1.3.0-beta.1",
-    "@eva-design/processor": "^1.3.0-beta.1",
+    "@eva-design/dss": "^1.3.0",
+    "@eva-design/processor": "^1.3.0",
     "hoist-non-react-statics": "^3.2.1",
     "lodash.merge": "^4.6.1",
     "fecha": "3.0.3"
