--- a/src/template-js/template/package.json
+++ b/src/template-js/template/package.json
@@ -10,9 +10,9 @@
     "postinstall": "react-native link"
   },
   "dependencies": {
-    "@eva-design/eva": "^1.3.0-beta.1",
-    "@ui-kitten/components": "^4.3.0-beta.1",
-    "@ui-kitten/eva-icons": "^4.3.0-beta.1",
+    "@eva-design/eva": "^1.3.0",
+    "@ui-kitten/components": "4.3.0",
+    "@ui-kitten/eva-icons": "4.3.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-svg": "^9.13.3"
