--- a/src/playground/package.json
+++ b/src/playground/package.json
@@ -16,15 +16,15 @@
   },
   "dependencies": {
     "@react-navigation/web": "^1.0.0-alpha.9",
-    "expo": "^35.0.0",
-    "expo-font": "^7.0.0",
-    "react": "~16.8.3",
-    "react-dom": "~16.8.3",
-    "react-native": "~0.59.10",
-    "react-native-gesture-handler": "~1.3.0",
-    "react-native-reanimated": "~1.2.0",
-    "react-native-safe-area-context": "~0.3.6",
-    "react-native-svg": "~9.9.5",
+    "expo": "^36.0.0",
+    "expo-font": "~8.0.0",
+    "react": "~16.9.0",
+    "react-dom": "~16.9.0",
+    "react-native": "~0.61.4",
+    "react-native-gesture-handler": "~1.5.0",
+    "react-native-reanimated": "~1.4.0",
+    "react-native-safe-area-context": "0.6.0",
+    "react-native-svg": "~9.13.3",
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.3.3",
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@expo/webpack-config": "0.7.6",
-    "babel-preset-expo": "^7.1.0"
+    "babel-preset-expo": "^7.1.0",
+    "expo-cli": "^3.11.1"
   }
 }
