--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,13 +2,13 @@
   "compilerOptions": {
     "baseUrl": "./",
     "outDir": "./dist/tsc-out",
+    "target": "esnext",
+    "moduleResolution": "node",
+    "jsx": "react",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "sourceMap": true,
-    "moduleResolution": "node",
-    "jsx": "react-native",
-    "target": "es2015",
     "declaration": true,
     "skipLibCheck": true,
     "paths": {
