--- a/src/playground/package.json
+++ b/src/playground/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@react-navigation/web": "^1.0.0-alpha.9",
+    "awesome-debounce-promise": "^2.1.0",
     "expo": "^36.0.0",
     "expo-font": "~8.0.0",
     "react": "~16.9.0",
