--- a/src/playground/package.json
+++ b/src/playground/package.json
@@ -19,6 +19,7 @@
     "awesome-debounce-promise": "^2.1.0",
     "expo": "^36.0.0",
     "expo-font": "~8.0.0",
+    "formik": "^2.0.8",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "~0.61.4",
@@ -30,10 +31,12 @@
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.3.3",
     "react-navigation-stack": "^1.10.3",
-    "react-navigation-tabs": "^2.6.0"
+    "react-navigation-tabs": "^2.6.0",
+    "yup": "^0.28.0"
   },
   "devDependencies": {
     "@expo/webpack-config": "0.7.6",
+    "@types/yup": "^0.26.26",
     "babel-preset-expo": "^7.1.0",
     "expo-cli": "^3.11.1"
   }
