--- a/src/moment/package.json
+++ b/src/moment/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ui-kitten/moment",
   "description": "moment.js services for UI Kitten",
-  "version": "4.3.2",
+  "version": "4.4.0-beta.1",
   "author": "akveo <contact@akveo.com>",
   "license": "MIT",
   "homepage": "https://github.com/akveo/react-native-ui-kitten#readme",
@@ -24,7 +24,7 @@
     "moment": "^2.24.0"
   },
   "peerDependencies": {
-    "@ui-kitten/components": "4.3.2",
+    "@ui-kitten/components": "4.4.0-beta.1",
     "moment": "^2.24.0"
   },
   "sideEffects": false
