--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ui-kitten",
-  "version": "4.3.2",
+  "version": "4.4.0-beta.1",
   "private": true,
   "license": "MIT",
   "author": "akveo <contact@akveo.com>",
