--- a/src/playground/package.json
+++ b/src/playground/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ui-kitten/playground",
-  "version": "4.3.2",
+  "version": "4.4.0-beta.1",
   "private": true,
   "workspaces": {
     "nohoist": [
