--- a/src/template-ts/template/package.json
+++ b/src/template-ts/template/package.json
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "@eva-design/eva": "^1.3.1",
-    "@ui-kitten/components": "4.3.2",
-    "@ui-kitten/eva-icons": "4.3.2",
+    "@ui-kitten/components": "4.4.0-beta.1",
+    "@ui-kitten/eva-icons": "4.4.0-beta.1",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-svg": "^9.13.3"
