--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
-    "@eva-design/eva": "^1.3.2",
+    "@eva-design/eva": "^1.4.0",
+    "@eva-design/material": "^1.4.0",
     "@types/gulp": "ts3.7",
     "@types/gulp-replace": "ts3.7",
     "@types/jest": "ts3.7",
