--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -3,10 +3,12 @@ on:
   push:
     branches:
       - master
+      - next
 
   pull_request:
     branches:
       - master
+      - next
 
 jobs:
   build:
