--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,9 @@
     "baseUrl": "./",
     "outDir": "./dist/tsc-out",
     "target": "esnext",
+    "module": "commonjs",
     "moduleResolution": "node",
     "jsx": "react",
-    "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "sourceMap": true,
