fix(docs): mimic docs app structure to avoid 404

--- a/docs/package.json
+++ b/docs/package.json
@@ -11,10 +11,12 @@
   "scripts": {
     "ng": "ng",
     "ngh": "ngh",
+    "gulp": "../node_modules/.bin/gulp",
     "start": "ng serve",
     "build": "ng build",
     "clean": "rimraf dist",
     "landing": "cp -r src/landing/ dist/",
+    "docs:dirs": "gulp create-docs-dirs",
     "build:prod": "npm run build -- docs --prod --aot --base-href '/react-native-ui-kitten/docs/'",
     "gh-pages": "npm run ngh -- --dir ./dist"
   },
