--- a/src/date-fns/package.json
+++ b/src/date-fns/package.json
@@ -21,7 +21,7 @@
     "access": "public"
   },
   "devDependencies": {
-    "date-fns": "^1.30.1"
+    "date-fns": "2"
   },
   "peerDependencies": {
     "@ui-kitten/components": "5.0.0",
