feat(templates):update templates to uikitten 5.1.0 (#1408)

--- a/src/template-js/template/package.json
+++ b/src/template-js/template/package.json
@@ -7,30 +7,28 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint . --ext .js,.jsx"
+    "lint": "eslint ."
   },
   "dependencies": {
-    "@eva-design/eva": "2.0.0",
-    "@ui-kitten/components": "5.1.0",
-    "@ui-kitten/eva-icons": "5.1.0",
-    "react": "16.11.0",
-    "react-native": "0.62.2",
-    "react-native-svg": "^12.1.0"
+    "react": "17.0.1",
+    "react-native": "0.64.0",
+    "@eva-design/eva": "^2.1.0",
+    "@ui-kitten/components": "^5.1.0",
+    "@ui-kitten/eva-icons": "^5.1.0",
+    "@ui-kitten/metro-config": "^5.1.0",
+    "react-native-svg": "^12.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.2",
-    "@babel/runtime": "^7.6.2",
-    "@react-native-community/eslint-config": "^1.0.0",
-    "@ui-kitten/metro-config": "5.0.0",
-    "babel-jest": "^24.9.0",
-    "eslint": "^6.5.1",
-    "jest": "^24.9.0",
-    "metro-react-native-babel-preset": "^0.58.0",
-    "react-test-renderer": "16.11.0",
-    "prettier": "^2.0.2"
+    "@babel/core": "^7.12.9",
+    "@babel/runtime": "^7.12.5",
+    "@react-native-community/eslint-config": "^2.0.0",
+    "babel-jest": "^26.6.3",
+    "eslint": "^7.14.0",
+    "jest": "^26.6.3",
+    "metro-react-native-babel-preset": "^0.64.0",
+    "react-test-renderer": "17.0.1"
   },
   "jest": {
-    "preset": "react-native",
-    "transformIgnorePatterns": []
+    "preset": "react-native"
   }
 }
