--- a/src/template-ts/template/package.json
+++ b/src/template-ts/template/package.json
@@ -10,30 +10,31 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "@eva-design/eva": "2.0.0",
-    "@ui-kitten/components": "5.1.0",
-    "@ui-kitten/eva-icons": "5.1.0",
-    "react": "16.11.0",
-    "react-native": "0.62.2",
-    "react-native-svg": "^12.1.0"
+    "react": "17.0.1",
+    "react-native": "0.64.0",
+    "@eva-design/eva": "^2.1.0",
+    "@ui-kitten/components": "^5.1.0",
+    "@ui-kitten/eva-icons": "^5.1.0",
+    "@ui-kitten/metro-config": "^5.1.0",
+    "react-native-svg": "^12.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.2",
-    "@babel/runtime": "^7.6.2",
-    "@react-native-community/eslint-config": "^1.0.0",
-    "@types/jest": "^24.0.24",
-    "@types/react-native": "^0.62.0",
-    "@types/react-test-renderer": "16.9.2",
-    "@typescript-eslint/eslint-plugin": "^2.25.0",
-    "@typescript-eslint/parser": "^2.25.0",
+    "@babel/core": "^7.12.9",
+    "@babel/runtime": "^7.12.5",
+    "@react-native-community/eslint-config": "^2.0.0",
+    "@types/jest": "^26.0.20",
+    "@types/react-native": "^0.64.0",
+    "@types/react-test-renderer": "^16.9.2",
     "@ui-kitten/metro-config": "5.0.0",
-    "babel-jest": "^24.9.0",
-    "eslint": "^6.5.1",
-    "jest": "^24.9.0",
-    "metro-react-native-babel-preset": "^0.58.0",
-    "react-test-renderer": "16.11.0",
-    "prettier": "^2.0.2",
+    "babel-jest": "^26.6.3",
+    "eslint": "^7.14.0",
+    "jest": "^26.6.3",
+    "metro-react-native-babel-preset": "^0.64.0",
+    "react-test-renderer": "17.0.1",
     "typescript": "^3.8.3"
+  },
+  "resolutions": {
+    "@types/react": "^17"
   },
   "jest": {
     "preset": "react-native",
